@@ -1,0 +1,3 @@
+MD5 14278ee54bef1cf65ee13735b134f9dd bzr-0.13.tar.gz 1126005
+RMD160 7df30a2feb06683991ebc74156c528c3c3d69f28 bzr-0.13.tar.gz 1126005
+SHA256 3bb3ef28b23b36f840c8b6f69589770764fa1fd97064d26a4f3fff4066d05237 bzr-0.13.tar.gz 1126005
