@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/bzr
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/bzr/Attic/ChangeLog,v 1.25 2006/11/28 17:18:39 marienz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/bzr/Attic/ChangeLog,v 1.26 2006/12/05 02:44:19 marienz Exp $
+
+*bzr-0.13 (05 Dec 2006)
+
+  05 Dec 2006; Marien Zwart <marienz@gentoo.org> -bzr-0.11.ebuild,
+  -bzr-0.13_rc1.ebuild, +bzr-0.13.ebuild:
+  Version bump, clean old versions.
 
 *bzr-0.13_rc1 (28 Nov 2006)
 
